chore: centralized Java 21 + Spring Boot migration
- Applied centralized migration profile: spring-petclinic
- Analyzed current Java/framework/dependency versions
- Applied generated OpenRewrite migration recipes
- Ran build + tests